# llm_council_cli_codex

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
llm_council/: cli.py  config.py  debate.py  history.py
llm_council/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
