[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-council-cli"
version = "0.1.0"
description = "Terminal LLM council with debate and synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
llm-council = "llm_council.cli:main"
